# nassi-shneiderman-generator

./: .gitignore  README.md  diagram.py  latex.py  main.py  pyproject.toml
.run/: main.run.xml  pytest in test.run.xml
scripts/: sync_expected.sh
src/nassi_shneiderman_generator/: diagram.py  dimensions.py  latex.py  main.py  symbols.py
symbols/: __init__.py
test/: test_snapshots.py
test/diagrams/: block.expected.tex  block.py  continuous_iteration.expected.tex  continuous_iteration.py  continuous_iteration_example.expected.tex  continuous_iteration_example.py  dyadic_selective.expected.tex  dyadic_selective.py  dyadic_selective_example.expected.tex  dyadic_selective_example.py  general01.expected.tex  general01.py  general02.expected.tex  general02.py  imperative.expected.tex  imperative.py  monadic_selective.expected.tex  monadic_selective.py  multiple_exclusive_selective.expected.tex  multiple_exclusive_selective.py  multiple_exclusive_selective_example.expected.tex  multiple_exclusive_selective_example.py  post_tested_iteration.expected.tex  post_tested_iteration.py  post_tested_iteration_example.expected.tex  post_tested_iteration_example.py  pre_tested_iteration.expected.tex  pre_tested_iteration.py  pre_tested_iteration_example.expected.tex  pre_tested_iteration_example.py  serial.expected.tex  serial.py  sparjahre.expected.tex  sparjahre.py  termination.expected.tex  termination.py  termination_example.expected.tex  termination_example.py
