[project]
name = "nassi-shneiderman-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.25.0",
    "ruff>=0.12.4",
]
