[project]
name = "nassi-shneiderman-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.package-data]
"nassi-shneiderman-generator" = ["py.typed"]

[dependency-groups]
dev = [
    "pyrefly>=0.25.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
